--- a/Gerencia/src/View/ContaView.form
+++ b/Gerencia/src/View/ContaView.form
@@ -52,11 +52,11 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="View.BotonesConta" name="botonesConta1">
+    <Component class="View.BotoesConta" name="botonesConta1">
     </Component>
     <Component class="View.TabelaClienteView" name="tabelaClienteView1">
     </Component>
-    <Component class="View.FormularioContaCorrienteView" name="formularioContaCorrienteView1">
+    <Component class="View.FormularioContaCorrenteView" name="formularioContaCorrienteView1">
     </Component>
     <Component class="View.FormularioContaInvestimento" name="formularioContaInvestimento1">
     </Component>
