--- a/Gerencia/src/View/ClienteTabelaView.form
+++ b/Gerencia/src/View/ClienteTabelaView.form
@@ -33,12 +33,15 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="modeloTabelaCliente">
+        <Component class="javax.swing.JTable" name="tabelaCliente">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    modeloTabelaCliente.addMouseListener(new java.awt.event.MouseAdapter() {&#xa;        public void mouseClicked(java.awt.event.MouseEvent evt) {&#xa;            modeloTabelaClienteMouseClicked(evt);&#xa;        }&#xa;    }&#xa;&#xa;)" type="code"/>
+              <Connection code="modeloTabelaCliente" type="code"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tabelaClienteMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
