--- a/Gerencia/src/View/JanelaManipulaView.form
+++ b/Gerencia/src/View/JanelaManipulaView.form
@@ -32,12 +32,12 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="manipulaBuscaView1" min="-2" max="-2" attributes="0"/>
-                      <Component id="manipulaBotoesView2" alignment="0" min="-2" pref="379" max="-2" attributes="0"/>
+                      <Component id="manipulaBotoesView2" alignment="0" pref="379" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
