--- a/Gerencia/src/View/ContaInvestimentoFormularioView.form
+++ b/Gerencia/src/View/ContaInvestimentoFormularioView.form
@@ -72,7 +72,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Depositto Minimo:"/>
+        <Property name="text" type="java.lang.String" value="Deposito Minimo:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
