--- a/Gerencia/src/View/JanelaContaView.form
+++ b/Gerencia/src/View/JanelaContaView.form
@@ -24,13 +24,13 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="botonesConta1" min="-2" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="formularioContaCorrienteView1" min="-2" max="-2" attributes="0"/>
-                          <Component id="formularioContaInvestimento1" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="formularioContaInvestimento1" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="103" alignment="0" groupAlignment="1" attributes="0">
+                      <Component id="formularioContaCorrienteView1" min="-2" max="-2" attributes="0"/>
+                      <Component id="botonesConta1" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
