--- a/Gerencia/src/View/ContaInvestimentoFormularioView.form
+++ b/Gerencia/src/View/ContaInvestimentoFormularioView.form
@@ -87,12 +87,12 @@
     </Component>
     <Component class="javax.swing.JLabel" name="labelMontanteMinimo">
       <Properties>
-        <Property name="text" type="java.lang.String" value="#######"/>
+        <Property name="text" type="java.lang.String" value="R$ 100.00"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="labelDepositoMinimo">
       <Properties>
-        <Property name="text" type="java.lang.String" value="#######"/>
+        <Property name="text" type="java.lang.String" value="R$ 50.00"/>
       </Properties>
     </Component>
   </SubComponents>
