tabela manipula buscar show saldo

--- a/Gerencia/src/View/ManipulaBuscaView.form
+++ b/Gerencia/src/View/ManipulaBuscaView.form
@@ -26,24 +26,19 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="jLabel1" min="-2" pref="31" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="CpfBusca" min="-2" pref="142" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
-                      <Component id="BtnBuscar" min="-2" max="-2" attributes="0"/>
-                  </Group>
                   <Component id="jLabel3" alignment="0" min="-2" pref="125" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                          <Component id="labelNomeC" alignment="0" max="32767" attributes="0"/>
+                          <Component id="labelNumC" alignment="0" max="32767" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="jLabel1" min="-2" pref="31" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="CpfBusca" min="-2" pref="142" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="numeroContaBusca" min="-2" pref="112" max="-2" attributes="0"/>
-                          <Component id="nomeCliente" min="-2" pref="60" max="-2" attributes="0"/>
-                      </Group>
+                      <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                      <Component id="BtnBuscar" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace pref="38" max="32767" attributes="0"/>
@@ -55,21 +50,17 @@
           <Group type="102" attributes="0">
               <Component id="jLabel3" min="-2" pref="16" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="BtnBuscar" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="CpfBusca" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="BtnBuscar" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="numeroContaBusca" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
+              <Component id="labelNumC" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="nomeCliente" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
+              <Component id="labelNomeC" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -88,14 +79,9 @@
         <Property name="text" type="java.lang.String" value="Busca por CPF"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel4">
+    <Component class="javax.swing.JLabel" name="labelNumC">
       <Properties>
         <Property name="text" type="java.lang.String" value="N&#xfa;mero da Conta"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="numeroContaBusca">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="####"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="BtnBuscar">
@@ -103,14 +89,9 @@
         <Property name="text" type="java.lang.String" value="Buscar"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel5">
+    <Component class="javax.swing.JLabel" name="labelNomeC">
       <Properties>
         <Property name="text" type="java.lang.String" value="Nome do Cliente"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="nomeCliente">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="####"/>
       </Properties>
     </Component>
   </SubComponents>
